--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<html> 
-  <head> 
-    <script src="jquery.js"></script> 
-    <script> 
-    $(function(){
-      $("#includedContent").load("./src/index.html"); 
-    });
-    </script> 
-  </head> 
-
-  <body> 
-     <div id="includedContent"></div>
-  </body> 
-</html>
+<meta http-equiv="refresh" content="0;url=https://edmasternava.github.io/src/index.html" />
